<resources>
    <string name="app_name">chapter02</string>
    <string name="cloud_ip">云平台IP</string>
    <string name="cloud_port">云平台端口</string>
    <string name="cloud_user">云平台用户</string>
    <string name="cloud_password">云平台密码</string>
    <string name="proj_ID">项目ID</string>
    <string name="NET_id">网关ID</string>
    <string name="temp_api">温度标识</string>
    <string name="hum_api">湿度标识</string>
    <string name="light_api">光照标识</string>
    <string name="human_api">人体标识</string>


    <string name="ed_cloud_ip">192.168.0.1</string>
    <string name="ed_cloud_port">80</string>
    <string name="ed_cloud_user">19033822991</string>
    <string name="ed_cloud_password">yuhao1125</string>
    <string name="ed_proj_ID">795154</string>
    <string name="ed_NET_id">1002</string>
    <string name="ed_temp_api">m_temp</string>
    <string name="ed_hum_api">z_humidity</string>
    <string name="ed_lighht_api">m_light</string>
    <string name="ed_human_api">m_human</string>
</resources>